atualização de diretorio remoto

--- a/src/app/pages/pessoal/cargo/cargo-form/cargo-form.component.html
+++ b/src/app/pages/pessoal/cargo/cargo-form/cargo-form.component.html
@@ -19,7 +19,7 @@ button-class = "btn-light"
     <h1 class = "h5">Informações do cargo:</h1>
 </div>
 <div class="card-body">
-    <div class="row">
+    <div class="row"> 
         <div class="c col-md-2">
             <mat-form-field>
                 <input matInput placeholder="Nome" [formControl]="resourceForm.get('nomeCargo')" autocomplete="off" spellcheck="false">
@@ -28,7 +28,7 @@ button-class = "btn-light"
         </div>
         <div class="c col-md-2">
             <mat-form-field>
-                <input matInput  [imask]="imaskConfig"  placeholder="Salário Base" [formControl]="resourceForm.get('salarioBase')" autocomplete="off" spellcheck="false">
+                <input [imask]="imaskConfig"  unmask='typed' matInput  placeholder="Salário Base" [formControl]="resourceForm.get('salarioBase')" autocomplete="off" spellcheck="false">
                 <span matPrefix>R$&nbsp;</span>
                 <mat-error >{{errorMessage.getErrorMessage(resourceForm.get('salarioBase'))}}</mat-error>
             </mat-form-field>
@@ -46,6 +46,6 @@ button-class = "btn-light"
 <div style="width: fit-content;margin: 0 auto">
     <button [disabled] ="submittingForm " type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
 </div>
- {{this.resourceForm.value|json}}
+
 </form>
 
